--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello World!</title>
-
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>ClipMaster</title>
+		<link rel="stylesheet" href="style.css" type="text/css" />
+	</head>
+	<body></body>
+	<script>
+		import renderer;
+	</script>
 </html>
