--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
 		<title>ClipMaster</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
-	<body></body>
-	<script>
-		import renderer;
-	</script>
+	<body>
+		<script>
+			require('./renderer');
+		</script>
+	</body>
 </html>
