--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>ClipMaster</title>
-		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
-	<body>
-		<script>
-			require('./renderer');
-		</script>
-	</body>
+	<body></body>
 </html>
