--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>ClipMaster</title>
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="script-src 'self';"
+		/>
 	</head>
 	<body></body>
 </html>
